Banner design complete

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Shishir | Portfolio</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +21,22 @@
                 <li><button class="btn font-open-sans">Hire Me</button></li>
             </ul>
         </nav>
-        
+
+        <section id="banner">
+            <div class="banner-content">
+                <h2>Hello, myself</h2>
+                <h1>Shishir Karmokar</h1>
+                <p class="color-para">I'm a <strong>Web Developer</strong>  <br>Student of <strong>Computer Science & Engineering</strong><br>Currently Studying in Bsc at <strong><a href="https://daffodilvarsity.edu.bd/" target="_blank">Daffodil International University</a> </strong></p>
+
+                <button class="btn btn1"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class=" btn2"><i class="fa-solid fa-phone"></i> Contact</button>
+
+            </div>
+            <div class="banner-img">
+                <img src="images/shishir.png" alt="my photo">
+
+            </div>
+        </section>
     </header>
 
 
