about section done

--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
             </div>
         </section>
     </header>
+    <main>
+        <section id="about">
+            <div class="about-container container color-bg">
+                <div class="section-heading">
+                    <h2>About Me</h2>
+                    <p class="color-para">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                </div>
+                <div class="about-info">
+                    <div class="info-card">
+                        <p class="color-para">Name:</p>
+                        <h4>Mr. Shishir</h4>
+                    </div>
+                    <div class="info-card">
+                        <p class="color-para">Email:</p>
+                        <h4>shuvroshishirzzz@gmail.com</h4>
+                    </div>
+                    <div class="info-card">
+                        <p class="color-para">Date of Birth:</p>
+                        <h4>30 March</h4>
+                    </div>
+                    <div class="info-card">
+                        <p class="color-para">From:</p>
+                        <h4>Mirzapur, Tangail, BD</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 </body>
