skills section done

--- a/index.html
+++ b/index.html
@@ -65,7 +65,43 @@
                 </div>
             </div>
         </section>
+
+        <section id="skills">
+            <div class="skills-container ">
+                <div class="section-heading container">
+                    <h2>What I do</h2>
+                    <p class="color-para">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                </div>
+
+                <div class="skills-box">
+                    <div class="skills-cards">
+                        <img src="images/icons/js.png" alt="javaScript">
+                        <h3>Java Script</h3>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skills-cards">
+                        <img src="images/icons/react.png" alt="React">
+                        <h3>React</h3>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skills-cards">
+                        <img src="images/icons/nodejs.png" alt="Node.js">
+                        <h3>Node.js</h3>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="skills-cards">
+                        <img src="images/icons/mongo.png" alt="MongoDB">
+                        <h3>MongoDB</h3>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <!-- <p>&copy; 2026 All right reserved. Made with &#129505;</p> -->
+    </footer>
 
 
 </body>
