--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="banner-content">
                 <h2>Hello, myself</h2>
                 <h1>Shishir Karmokar</h1>
-                <p class="color-para">I'm a <strong>Web Developer</strong>  <br>Student of <strong>Computer Science & Engineering</strong><br>Currently Studying in Bsc at <strong><a href="https://daffodilvarsity.edu.bd/" target="_blank">Daffodil International University</a> </strong></p>
+                <p class="color-para">I'm a <strong>Web Developer</strong> <br>Student of <strong>Computer Science &
+                        Engineering</strong><br>Currently Studying in Bsc at <strong><a
+                            href="https://daffodilvarsity.edu.bd/" target="_blank">Daffodil International University</a>
+                    </strong></p>
 
                 <button class="btn btn1"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class=" btn2"><i class="fa-solid fa-phone"></i> Contact</button>
@@ -43,7 +46,10 @@
             <div class="about-container container color-bg">
                 <div class="section-heading">
                     <h2>About Me</h2>
-                    <p class="color-para">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                    <p class="color-para">I, m a designer & developer with a passion for web design. I enjoy developing
+                        simple, clean and slick websites that provide real value to the end user. Thousands of clients
+                        have procured exceptional resulfs while working with me. Delivering work within time and budget
+                        which meets clients requirements in our mata.</p>
                 </div>
                 <div class="about-info">
                     <div class="info-card">
@@ -70,31 +76,127 @@
             <div class="skills-container ">
                 <div class="section-heading container">
                     <h2>What I do</h2>
-                    <p class="color-para">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                    <p class="color-para">I have more than 10 years experience building software for clients all over
+                        the world. Below is a quick overview of my main technical skill sets and technologies i use.
+                        Want to find out more about my experience? Check out my online resume and project portfolio.</p>
                 </div>
 
                 <div class="skills-box">
                     <div class="skills-cards">
                         <img src="images/icons/js.png" alt="javaScript">
                         <h3>Java Script</h3>
-                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skills-cards">
                         <img src="images/icons/react.png" alt="React">
                         <h3>React</h3>
-                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skills-cards">
                         <img src="images/icons/nodejs.png" alt="Node.js">
                         <h3>Node.js</h3>
-                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skills-cards">
                         <img src="images/icons/mongo.png" alt="MongoDB">
                         <h3>MongoDB</h3>
-                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="color-para">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="resume">
+            <div class="container ">
+                <div class="section-heading">
+                    <h2>A summary of My Resume</h2>
+                </div>
+                <div class="resume-container">
+                    <div class="education">
+                        <h3 class="section-title">My Education</h3>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <h3 class="section-title">My Experiences</h3>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="resume-cards">
+                            <h3 class="card-title">Master in Computer Engineering</h3>
+                            <p class="card-info">Harvard University / 2015 - 2017</p>
+                            <p class="card-txt">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="resume-btn">
+                    <button class="btn btn1"><i class="fa-solid fa-download"></i> Download CV</button>
+                </div>
+
             </div>
         </section>
     </main>
