footer section done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="color-bg">
         <nav class="container">
             <div class="logo">
-                <h2>SHISHI<span class="color-primary">R</span></h2>
+                <h2>MR.<span class="color-primary">DEV</span></h2>
             </div>
             <ul class="menu">
                 <li><a href="#">Portfolio</a></li>
@@ -41,6 +41,7 @@
             </div>
         </section>
     </header>
+
     <main>
         <section id="about">
             <div class="about-container container color-bg">
@@ -193,7 +194,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="resume-btn">
+                <div class="txt-center">
                     <button class="btn btn1"><i class="fa-solid fa-download"></i> Download CV</button>
                 </div>
 
@@ -201,10 +202,37 @@
         </section>
     </main>
 
-    <footer>
-        <!-- <p>&copy; 2026 All right reserved. Made with &#129505;</p> -->
+    <footer class="color-bg">
+        <div class="container footer-container">
+            <div class="social">
+                <h2>Lets Connect</h2>
+                <p class="color-para">Please fill out the form on this section to contact with me or call between 9:00
+                    A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/shuvr0shishir" target="_blank"><img
+                            src="images/icons/facebook.png" alt=""></a>
+                    <a href="https://www.instagram.com/shuvr0shishir/" target="_blank"><img src="images/icons/insta.png"
+                            alt=""></a>
+                    <a href="#"><img src="images/icons/twitter.png" alt=""></a>
+                </div>
+            </div>
+            <form action="">
+                <h2>Let’s Message me</h2>
+                <div class="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                </div>
+                <div class="">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                </div>
+                <div class="">
+                    <textarea rows="8" name="" id="" placeholder="Message"></textarea>
+                </div>
+                <input class=" btn" type="submit" value="Submit">
+            </form>
+        </div>
+        <p class="txt-center">&copy; 2026 All right reserved. Made with &#129505;</p>
     </footer>
-
 
 </body>
 
