--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
         <section id="skills">
-            <div class="skills-container ">
+            <div class="skills-container container">
                 <div class="section-heading container">
                     <h2>What I do</h2>
                     <p class="color-para">I have more than 10 years experience building software for clients all over
