Mobile responsive updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Shishir | Portfolio</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -36,7 +36,7 @@
 
             </div>
             <div class="banner-img">
-                <img src="images/shishir.png" alt="my photo">
+                <img src="./images/shishir.png" alt="my photo">
 
             </div>
         </section>
@@ -84,25 +84,25 @@
 
                 <div class="skills-box">
                     <div class="skills-cards">
-                        <img src="images/icons/js.png" alt="javaScript">
+                        <img src="./images/icons/js.png" alt="javaScript">
                         <h3>Java Script</h3>
                         <p class="color-para">List skill/technologies here. You can change the icon above to any of the
                             1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skills-cards">
-                        <img src="images/icons/react.png" alt="React">
+                        <img src="./images/icons/react.png" alt="React">
                         <h3>React</h3>
                         <p class="color-para">List skill/technologies here. You can change the icon above to any of the
                             1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skills-cards">
-                        <img src="images/icons/nodejs.png" alt="Node.js">
+                        <img src="./images/icons/nodejs.png" alt="Node.js">
                         <h3>Node.js</h3>
                         <p class="color-para">List skill/technologies here. You can change the icon above to any of the
                             1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skills-cards">
-                        <img src="images/icons/mongo.png" alt="MongoDB">
+                        <img src="./images/icons/mongo.png" alt="MongoDB">
                         <h3>MongoDB</h3>
                         <p class="color-para">List skill/technologies here. You can change the icon above to any of the
                             1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -211,10 +211,10 @@
                     Monday through Friday.</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/shuvr0shishir" target="_blank"><img
-                            src="images/icons/facebook.png" alt=""></a>
+                            src="./images/icons/facebook.png" alt=""></a>
                     <a href="https://www.instagram.com/shuvr0shishir/" target="_blank"><img src="images/icons/insta.png"
                             alt=""></a>
-                    <a href="#"><img src="images/icons/twitter.png" alt=""></a>
+                    <a href="#"><img src="./images/icons/twitter.png" alt=""></a>
                 </div>
             </div>
             <form action="">
