optimized photo added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             </div>
             <div class="banner-img">
-                <img src="./images/shishir.png" alt="my photo">
+                <img src="./images/my-photo.png" alt="my photo">
 
             </div>
         </section>
